--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
